--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <script src="js/three.min.js"></script>
+    <script src="js/three.js"></script>
     <script src="js/OrbitControls.js"></script>
     <script src='js/main.js'></script>
 </body>
